# rust-music-theory

./: Cargo.toml
src/: lib.rs
src/chord/: chord.rs  errors.rs  number.rs  quality.rs
src/interval/: errors.rs  interval.rs
src/note/: errors.rs  note.rs  pitch.rs
src/scale/: errors.rs  mode.rs  scale.rs  scale_type.rs
tests/: tests.rs
tests/chord/: test_chord.rs
tests/interval/: test_interval.rs
tests/note/: test_pitch.rs
