[package]
name = "rust-music-theory"
description = "A library that procedurally implements music theory notions like Scale, Chord, Interval, Note"
license = "MIT"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/ozankasikci/rust-music-theory"
authors = ["Ozan Kaşıkçı <ozan@kasikci.io>"]
edition = "2018"
exclude = ["/.travis.yml", ".gitignore"]
keywords = ["music", "music-theory"]

[dependencies]
heapless = { version = "0.8.0", features = ["defmt-03"] }
libm = "^0.2.8"
